<resources>
    <string name="app_name">Idea6</string>

    <!-- Preference Titles -->
    <string name="visuals_header">Display</string>
    <string name="notification_header">Notifications</string>

    <!-- Display Preferences -->
    <string name="theme">Theme</string>
    <string name="text_size">Text size</string>

    <!-- Notification Preferences -->
    <string name="turn_on_notification">Daily notification</string>
    <string name="notifications_summary_on">Send Word of the Day notifications</string>
    <string name="notifications_summary_off">Do not send Word of the Day notifications</string>
    <string name="daily_notification_time">Notification time</string>
    <string name="select_time">Select notification time</string>
    <string name="notification_time">%s</string>

    <string name="channel_name">word_notif</string>
    <string name="channel_description">word_refresh</string>

    <string name="go_to_settings">Go to Settings</string>
    <string name="go_to_your_list">Go to your list</string>
    <string name="new_word">New Word</string>
    <string name="add_to_custom_dictionary">Add to Dictionary</string>
    <string name="added_to_custom_dictionary">Added to Dictionary</string>
    <string name="pronunciation_format">/%s/</string>
    <string name="pronunciation_unavailable">(No pronunciation data)</string>
</resources>