<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".word_of_the_day">

    <View
        android:id="@+id/word_box4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.3"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintBottom_toBottomOf="@id/actdictbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/word"
        />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Word"
        android:textSize="36sp"
        android:layout_margin="8dp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/definition"/>

    <TextView
        android:id="@id/pronunciation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pronunciation_format"
        android:textSize="18sp"
        android:layout_margin="4dp"
        tools:text="/Pronunciation/"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word"
        app:layout_constraintBottom_toTopOf="@id/definition" />

    <TextView
        android:id="@+id/definition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="Definition"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pronunciation"
        app:layout_constraintBottom_toTopOf="@id/actdictbutton"/>

    <Button
        android:id="@+id/actdictbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/add_to_custom_dictionary"
        app:layout_constraintTop_toBottomOf="@id/definition"
        app:layout_constraintBottom_toBottomOf="@id/word_box4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Button
        android:id="@+id/reloadbutton"
        android:layout_width="149dp"
        android:layout_height="87dp"
        android:layout_marginTop="12dp"
        android:text="@string/new_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refresh" />

    <ImageView
        android:id="@+id/refresh"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toTopOf="@+id/reloadbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word" />


</androidx.constraintlayout.widget.ConstraintLayout>